test/expected/declare_sic-knr.out
declare x as signed char
             ^
14: error: "signed": unsupported type until C89; did you mean "__signed" or "unsigned"?
